removido o loop do video

--- a/index.html
+++ b/index.html
@@ -44,21 +44,31 @@
             cursor: pointer;
             z-index: 1;
         }
+
+        #progress-bar {
+            position: absolute;
+            width: 340px;
+            bottom: 20px;
+            left: calc(50% - 170px);
+            z-index: 2;
+            display: none;
+        }
     </style>
 </head>
 
 <body>
     <div id="video-container">
-        <video data-active="false" id="video" playsinline loop width="100%" height="100%">
+        <video data-active="false" id="video" playsinline width="100%" height="100%">
             <source src="https://player.vimeo.com/progressive_redirect/playback/847037873/rendition/240p/file.mp4?loc=external&signature=830dda1e1c865d0e3478c652cdcd06cd5f49100d4d42dbd02cfeb76b811c58b6">
         </video>
         <button id="play-button">Depoimento de Captação</button>
+        <input type="range" id="progress-bar" min="0" max="100" value="0">
     </div>
 
     <script>
         const playButton = document.getElementById('play-button');
         const video = document.getElementById('video');
-
+        const progressBar = document.getElementById('progress-bar');
         let isPlaying = false;
 
         function toggleVideo() {
@@ -70,8 +80,23 @@
             isPlaying = !isPlaying;
         }
 
+        function updateProgressBar() {
+            const progress = (video.currentTime / video.duration) * 100;
+            progressBar.value = progress;
+        }
+
+        function onVideoEnded() {
+            video.style.display = 'none';
+            progressBar.style.display = 'none';
+            playButton.style.display = 'block';
+            video.pause();
+            video.currentTime = 0;
+            isPlaying = false;
+        }
+
         playButton.addEventListener('click', () => {
             video.style.display = 'block';
+            progressBar.style.display = 'block';
             playButton.style.display = 'none';
             toggleVideo();
         });
@@ -79,6 +104,17 @@
         video.addEventListener('click', () => {
             toggleVideo();
         });
+
+        video.addEventListener('timeupdate', () => {
+            updateProgressBar();
+        });
+
+        progressBar.addEventListener('input', () => {
+            const seekTime = (progressBar.value / 100) * video.duration;
+            video.currentTime = seekTime;
+        });
+
+        video.addEventListener('ended', onVideoEnded);
     </script>
 </body>
 
